--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-loading-bar color="#22C55E" [includeSpinner]="true" [includeBar]="false"></ngx-loading-bar>
+<ngx-loading-bar color="#22C55E" [includeSpinner]="true" [includeBar]="true"></ngx-loading-bar>
 <main>
   <div class="content mt-4">
     <router-outlet></router-outlet>
