--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
     <div class="flex justify-center items-center gap-2">
       <p-button [icon]="isDarkMode ? 'pi pi-sun' : 'pi pi-moon'" severity="secondary" [rounded]="true"
         (onClick)="toggleDarkMode()" />
-      <p-button [icon]="isUserAuthenticated ? 'pi pi-wrench' : 'pi pi-info'" severity="secondary" [rounded]="true" (onClick)="showDialog()" />
+      <p-button icon="pi pi-info" severity="secondary" [rounded]="true" (onClick)="showDialog()" />
       <p-button [label]="btnLabel" icon="pi pi-sign-in" [severity]="isUserAuthenticated ? 'contrast' : 'primary'" [rounded]="true" (onClick)="onClick()" />
     </div>
   </ng-template>
@@ -17,20 +17,4 @@
   <p>
     Lorem ipsum dolor sit amet...
   </p>
-</p-dialog>
-
-<p-dialog header="Edit Profile" [appendTo]="'body'" [modal]="true" [(visible)]="isShowUserSettingsDialog">
-    <span class="p-text-secondary block mb-8">Update your information.</span>
-    <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Username</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" />
-    </div>
-    <div class="flex items-center gap-4 mb-8">
-        <label for="email" class="font-semibold w-24">Email</label>
-        <input pInputText id="email" class="flex-auto" autocomplete="off" />
-    </div>
-    <div class="flex justify-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="isShowUserSettingsDialog = false" />
-        <p-button label="Save" (click)="isShowUserSettingsDialog = false" />
-    </div>
 </p-dialog>
