--- a/frontend/src/app/submissions/submissions.component.html
+++ b/frontend/src/app/submissions/submissions.component.html
@@ -54,3 +54,10 @@
         </tr>
     </ng-template>
 </p-table>
+
+<p-dialog header="Submission Results" [appendTo]="'body'" [modal]="true" [(visible)]="isShowDetailDialog"
+  [maximizable]="true">
+  <p>Most Likely Prediction: <strong>{{ prediction }}</strong></p>
+  <p-image [src]="resultImage" [appendTo]="'body'" alt="Image" width="100%" [preview]="true" />
+  <p>[!] This is an experimental model, do not use for primary diagnosis, please consult a healthcare professional instead.</p>
+</p-dialog>
