--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -12,9 +12,8 @@
   </ng-template>
 </p-menubar>
 
-<p-dialog header="So what is this website for?" [appendTo]="'body'" [modal]="true" [(visible)]="isShowInfoDialog"
-  [maximizable]="true">
+<p-dialog header="So what is this website for?" [appendTo]="'body'" [modal]="true" [(visible)]="isShowInfoDialog" [maximizable]="true" styleClass="max-w-md">
   <p>
-    Lorem ipsum dolor sit amet...
+    This is an automated skin disease diagnosis website using a deep learning model trained on Google's SCIN dataset in a multimodal fashion. The model is currently still experimental, but this application shows the possibility of using deep learning models with real life scenarios. 
   </p>
 </p-dialog>
